--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     		attribution: '<a href="https://www.mapbox.com/about/maps/" target="_blank">&copy; Mapbox &copy; OpenStreetMap</a>',
     		subdomains: ['a','b','c','d'],
     		mapId: 'slugis.l61emffd',
-    		token: 'pk.eyJ1Ijoic2x1Z2lzIiwiYSI6IlB5TlZENVUifQ.Z597Ia0qffZlYcGpbJtzTA'
+    		token: 'pk.eyJ1Ijoic2x1Z2lzIiwiYSI6IlB5TlZENVUifQ.Z597Ia0qffZlYcGpbJtzTA',
+    		maxZoom: 19
 		}).addTo(map);
 
 		var markers = L.markerClusterGroup();
